MDEV-15433: Optimizer does not use group by optimization with distinct

After the commit b76b69cd5fe634d8ddb9406aa2c82ef2a375b4d8
loose index scan for queries with DISTINCT stopped working.
That is why that commit has to be reverted.
Additionally this patch  fixes the problem of MDEV-10880.